[package]
name = "easy-cluster"
version = "0.1.0"
authors = ["CheaterCodes <cheater.codes@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.8"
petgraph = "0.5.1"
minecraft-schematics = { path = "./minecraft-schematics" }